--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "@nestjs/platform-express": "^8.0.0",
     "@typescript-eslint/eslint-plugin": "^5.30.5",
     "@typescript-eslint/parser": "^5.30.5",
+    "argon2": "^0.28.7",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
     "eslint": "^8.19.0",
     "eslint-config-prettier": "^8.5.0",
     "prettier": "^2.7.1",
@@ -37,11 +40,13 @@
     "@nestjs/cli": "^8.0.0",
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
+    "@prisma/client": "^4.0.0",
     "@types/express": "^4.17.13",
     "@types/jest": "27.5.0",
     "@types/node": "^16.0.0",
     "@types/supertest": "^2.0.11",
     "jest": "28.0.3",
+    "prisma": "^4.0.0",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
     "ts-jest": "28.0.1",
